--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
   <ul class="site-nav-desktop-nav">
     <li class="site-nav-desktop-item site-nav-hover-item" data-site-nav-category="Top Nav">
-      <a data-site-nav-element="Inspiration" href="https://dribbble.com/shots">Inspiration</a>
+      <a data-site-nav-element="Inspiration" href="https://dribbble.com/shots">Sia's Inspiration</a>
       <div class="site-nav-hover-menu">
         <ul class="site-nav-dropdown-list site-nav-dropdown-white-bg">
           <div data-site-nav-category="Inspiration">
